--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -208,7 +208,7 @@ partitioner: org.apache.cassandra.dht.Murmur3Partitioner
 # Enable / disable CDC functionality on a per-node basis. This modifies the logic used
 # for write path allocation rejection (standard: never reject. cdc: reject Mutation
 # containing a CDC-enabled table if at space limit in cdc_raw_directory).
-cdc_enabled: false
+cdc_enabled: true
 
 # CommitLogSegments are moved to this directory on flush if cdc_enabled: true and the
 # segment contains mutations for a CDC-enabled table. This should be placed on a
@@ -414,8 +414,8 @@ commitlog_segment_size_in_mb: 32
 # Compression to apply to the commit log. If omitted, the commit log
 # will be written uncompressed.  LZ4, Snappy, and Deflate compressors
 # are supported.
-# commitlog_compression:
-#   - class_name: LZ4Compressor
+commitlog_compression:
+- class_name: LZ4Compressor
 #     parameters:
 #         -
 
