--- a/test/conf/cassandra.yaml
+++ b/test/conf/cassandra.yaml
@@ -9,10 +9,10 @@ commitlog_sync: batch
 commitlog_sync_batch_window_in_ms: 1.0
 commitlog_segment_size_in_mb: 5
 commitlog_directory: build/test/cassandra/commitlog
-# commitlog_compression:
-# - class_name: LZ4Compressor
+commitlog_compression:
+- class_name: LZ4Compressor
 cdc_raw_directory: build/test/cassandra/cdc_raw
-cdc_enabled: false
+cdc_enabled: true
 hints_directory: build/test/cassandra/hints
 partitioner: org.apache.cassandra.dht.ByteOrderedPartitioner
 listen_address: 127.0.0.1
