--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,7 +133,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -308,7 +308,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -403,7 +403,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -513,7 +513,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -635,7 +635,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -730,7 +730,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -826,7 +826,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -922,7 +922,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -1018,7 +1018,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -1113,7 +1113,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -1208,7 +1208,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -1353,7 +1353,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -1475,7 +1475,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -1571,7 +1571,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 25
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -1670,7 +1670,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 25
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -1822,7 +1822,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 2
+    parallelism: 1
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -1885,7 +1885,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 35
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -1994,7 +1994,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 2
+    parallelism: 10
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -2101,10 +2101,10 @@ jobs:
   j11_build:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11:20210304
-    resource_class: xlarge
+    resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 2
+    parallelism: 1
     steps:
     - run:
         name: Log Environment Information
@@ -2203,7 +2203,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -2296,10 +2296,10 @@ jobs:
   j11_cqlshlib_tests:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11:20210304
-    resource_class: xlarge
+    resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 2
+    parallelism: 1
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -2354,7 +2354,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -2530,7 +2530,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 25
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -2606,7 +2606,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -2702,7 +2702,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 2
+    parallelism: 14
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -2808,10 +2808,10 @@ jobs:
   j8_build:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11-w-dependencies:20210304
-    resource_class: xlarge
+    resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 2
+    parallelism: 1
     steps:
     - run:
         name: Log Environment Information
@@ -2909,7 +2909,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -3004,7 +3004,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -3099,7 +3099,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 2
+    parallelism: 1
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -3162,7 +3162,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -3268,10 +3268,10 @@ jobs:
   j8_cqlshlib_tests:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11-w-dependencies:20210304
-    resource_class: xlarge
+    resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 2
+    parallelism: 1
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -3325,7 +3325,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 2
+    parallelism: 1
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -3388,7 +3388,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 25
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -3487,7 +3487,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -3596,7 +3596,7 @@ jobs:
     resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 100
+    parallelism: 20
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -3768,10 +3768,10 @@ jobs:
   j8_dtest_jars_build:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11-w-dependencies:20210304
-    resource_class: xlarge
+    resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 2
+    parallelism: 1
     steps:
     - attach_workspace:
         at: /home/cassandra
